Fixes bottom spacing issue and extra grid row for dream form

--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -8,7 +8,11 @@
   display: grid;
   grid-gap: 2rem;
   grid-template-columns: repeat(8, 1fr);
-  grid-template-rows: repeat(12, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+
+  @media (max-width: 46.875em) {
+    grid-template-rows: repeat(11, 1fr);
+  }
 
   &__error {
     color: $light-pink;
