--- a/src/styles/components/_wrapper.scss
+++ b/src/styles/components/_wrapper.scss
@@ -6,7 +6,6 @@
 
 .wrapper {
   padding-top: 13rem;
-  padding-bottom: 10%;
   margin: 0 auto;
   width: $grid-width;
 
